--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@
 @import './blocks/card/__like-btn/card__like-btn.css';
 @import './blocks/card/__like-btn/_active/card__like-btn_active.css';
 @import './blocks/card/__delete-btn/card__delete-btn.css';
+@import './blocks/card/__delete-btn/_hidden/card__delete-btn_hidden.css';
 @import './blocks/card/__like-wrapper/card__like-wrapper.css';
 @import './blocks/card/__like-count/card__like-count.css';
 
